--- a/app/src/main/res/layouts/welcome/layout/screen4.xml
+++ b/app/src/main/res/layouts/welcome/layout/screen4.xml
@@ -18,7 +18,7 @@
             android:id="@+id/animationView"
             android:layout_width="@dimen/anim_width"
             android:layout_height="@dimen/anim_height"
-            app:lottie_rawRes="@raw/timetable"
+            app:lottie_rawRes="@raw/leave"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"/>
 
@@ -27,7 +27,7 @@
             android:fontFamily="sans-serif-light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/slide_1_title"
+            android:text="@string/slide_4_title"
             android:textColor="@android:color/black"
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
@@ -39,7 +39,7 @@
             android:layout_marginTop="20dp"
             android:paddingLeft="@dimen/desc_padding"
             android:paddingRight="@dimen/desc_padding"
-            android:text="@string/slide_1_desc"
+            android:text="@string/slide_4_desc"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
             android:textSize="@dimen/slide_desc"
