--- a/app/src/main/res/layouts/modules/layout/activity_time_table_generation.xml
+++ b/app/src/main/res/layouts/modules/layout/activity_time_table_generation.xml
@@ -23,80 +23,124 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/timetable_toolbar_layout"
-        android:layout_above="@id/generateTimeTablebtn">
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:padding="10dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif-medium"
                 android:layout_height="wrap_content"
-                android:text="Semester">
-            </TextView>
-            <Spinner
+                android:fontFamily="sans-serif-medium"
+                android:text="Academic Year"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/timetable_year_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="2022"
                 android:layout_marginLeft="20dp"
                 android:paddingHorizontal="10dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:text="Semester"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <Spinner
                 android:id="@+id/semester_spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </Spinner>
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:layout_marginLeft="20dp"
+                android:paddingHorizontal="10dp"/>
         </LinearLayout>
+
         <LinearLayout
-            android:padding="10dp"
-            android:gravity="center"
-            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif-medium"
                 android:layout_height="wrap_content"
-                android:text="Program">
-            </TextView>
+                android:fontFamily="sans-serif-medium"
+                android:text="Program"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
             <Spinner
-                android:layout_marginLeft="20dp"
-                android:paddingHorizontal="10dp"
                 android:id="@+id/program_spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </Spinner>
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:layout_marginLeft="20dp"
+                android:paddingHorizontal="10dp"/>
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/selectexcelfilebtn"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@android:color/transparent"
             android:scaleType="fitXY"
             android:src="@drawable/ic_baseline_add_box_24"
-            android:background="@android:color/transparent"
-            app:tint="@color/black">
-        </ImageButton>
+            app:tint="@color/black"/>
+
         <TextView
             android:id="@+id/excelFileName"
-            android:layout_gravity="center"
-            android:textSize="18sp"
-            android:textColor="@color/gray"
-            android:fontFamily="sans-serif-medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Attach Excel File">
-        </TextView>
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-light"
+            android:text="Attach Excel File"
+            android:textColor="@color/gray"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
