--- a/app/src/main/res/layouts/modules/layout/layout_appointment_timing_item.xml
+++ b/app/src/main/res/layouts/modules/layout/layout_appointment_timing_item.xml
@@ -12,7 +12,7 @@
             android:id="@+id/doctor_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Doctor's Name"
+            android:text="Doctor Type"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:fontFamily="sans-serif-medium"/>
