--- a/app/src/main/res/layouts/dispensary_alertdialog/layout/student_appointment.xml
+++ b/app/src/main/res/layouts/dispensary_alertdialog/layout/student_appointment.xml
@@ -21,7 +21,29 @@
                 android:layout_height="wrap_content">
             </RadioGroup>
             <com.google.android.material.textfield.TextInputLayout
-                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:paddingHorizontal="10dp"
+                style="@style/Widget.AppTheme.TextInputLayoutList"
+                android:layout_marginTop="8dp"
+                android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/student_appointment_date"
+                    android:layout_width="match_parent"
+                    android:inputType="none"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:hint="Date"
+                    android:fontFamily="sans-serif"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:backgroundTint="@color/white"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:paddingHorizontal="10dp"
                 android:isScrollContainer="true"
                 style="@style/Widget.AppTheme.TextInputLayoutList"
                 android:layout_width="match_parent"
