--- a/app/src/main/res/layouts/dispensary_alertdialog/layout/student_appointment_status.xml
+++ b/app/src/main/res/layouts/dispensary_alertdialog/layout/student_appointment_status.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="wrap_content">
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:clickable="false"
+        android:isScrollContainer="false"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
+        android:id="@+id/student_dispensary_appointment_status_recyclerView"/>
+</RelativeLayout>
