--- a/app/src/main/res/layouts/toolbar/layout/toolbar.xml
+++ b/app/src/main/res/layouts/toolbar/layout/toolbar.xml
@@ -10,6 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        app:navigationIcon="?attr/homeAsUpIndicator"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/WhiteSmoke" />
