Sign In with Google implemented 'lnmiit.ac.in' domain verification added

--- a/app/src/main/res/menu/drawermenu_home.xml
+++ b/app/src/main/res/menu/drawermenu_home.xml
@@ -36,4 +36,9 @@
         android:title="About Us"
         android:icon="@drawable/aboutus">
     </item>
+    <item
+        android:id="@+id/menu_logout"
+        android:title="Log Out"
+        android:icon="@drawable/ic_baseline_logout_24">
+    </item>
 </menu>
