--- a/app/src/main/res/layouts/login/layout/activity_login.xml
+++ b/app/src/main/res/layouts/login/layout/activity_login.xml
@@ -7,68 +7,81 @@
     android:layout_height="match_parent"
     tools:context=".Login.LoginActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/login_Card"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical">
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            app:lottie_rawRes="@raw/login2"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"/>
-
-
-        <TextView
-            android:fontFamily="sans-serif-medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="@dimen/desc_padding"
-            android:paddingRight="@dimen/desc_padding"
-            android:text="@string/login_text"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="@dimen/slide_desc"
-            android:gravity="center_horizontal" />
-    </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/login_Card"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/login_progressBar"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        app:cardBackgroundColor="@color/WhiteSmoke">
+        android:layout_centerInParent="true">
+    </ProgressBar>
+
+    <RelativeLayout
+        android:id="@+id/login_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <LinearLayout
-            android:padding="10dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/login_Card"
+            android:layout_centerInParent="true"
             android:gravity="center"
+            android:orientation="vertical">
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animationView"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                app:lottie_rawRes="@raw/login2"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
+
+
+            <TextView
+                android:fontFamily="sans-serif-medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:paddingLeft="@dimen/desc_padding"
+                android:paddingRight="@dimen/desc_padding"
+                android:text="@string/login_text"
+                android:textAlignment="center"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="@dimen/slide_desc"
+                android:gravity="center_horizontal" />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/login_Card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="22dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            app:cardBackgroundColor="@color/WhiteSmoke">
+            <LinearLayout
+                android:padding="10dp"
                 android:layout_gravity="center"
-                android:src="@drawable/google"
-                android:layout_height="22dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="10dp"
-                android:text="Sign in with Google"
-                android:fontFamily="sans-serif-light"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/google"
+                    android:layout_height="22dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10dp"
+                    android:text="Sign in with Google"
+                    android:fontFamily="sans-serif-light"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
