--- a/app/src/main/res/menu/drawermenu_home.xml
+++ b/app/src/main/res/menu/drawermenu_home.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/menu_timetable"
         android:title="Time Table"
+        android:visible="false"
         android:icon="@drawable/timetable">
     </item>
     <item
